mvnplugin: fold into the Gradle build, migrate to current API, align run with the Gradle plugin
The maddi-mvnplugin was an untracked standalone Maven module on stale coordinates
(org.e2immu:e2immu-*:0.8.2-SNAPSHOT) and the pre-rename AnnotatedAPI API. This brings it
in-tree and up to date:

- Build: added to settings.gradle.kts; new build.gradle.kts with in-tree project(":maddi-*")
  deps + Maven plugin API (compileOnly) + resolver. Removed the standalone pom.xml/.iml.
- API rename: SourceSetImpl.Builder; LoadAnalyzedPackageFiles->LoadAnalysisResults; the
  modification-analyzer/link module moves; AnnotatedAPIConfiguration->AnalysisHintsConfiguration;
  Composer->AnalysisHintsComposer; DecoratorImpl moved to modification-prepwork; typesLoaded(true).
- Align `run` with the Gradle plugin: CommonMojo now builds a run-config Configuration
  (general+hints+language+input) exactly like AnalyzerPropertyComputer, and RunAnalyzerMojo
  hands it to the openjdk RunAnalyzer with a Main.EXIT_OK check (like AnalyzerWorkAction). The
  hand-rolled prep/modification pipeline is deleted.
- compile-annotated-apis -> compile-analysis-hints (routes through RunAnalyzer's hints-compiler
  mode); write-annotated-apis -> write-analysis-hints (AnalysisHintsComposer skeleton generator).

Compiles in-tree (./gradlew :maddi-mvnplugin:build). NOTE: openjdk parser needs the Maven JVM
started with the javac --add-exports (documented on RunAnalyzerMojo). Maven-plugin descriptor
(plugin.xml) generation is not yet wired: the usual Gradle tool (maven-plugin-development 0.4.3)
is incompatible with Gradle 9.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>